
[metadata]
name = graphene_graphiql_explorer
version = 0.1.1
description = A Django app that adds graphiql explorer to the graphiql view
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/creimers/graphene-graphiql-explorer
author = creimers
author_email = christoph@superservice-international.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[wheel]
universal = 1

[options]
include_package_data = true
packages = find:

